# advent-of-code

./: advent-of-code.cabal  flake.nix
src/: Main.hs  Util.hs
src/Year2022/: Day01.hs  Day02.hs  Day03.hs
