cabal-version:      2.4
name:               advent-of-code
version:            0.1.0
author:             Ashley Smith
maintainer:         git@aas.sh

executable advent-of-code
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    base,
  default-extensions:
    LambdaCase
