cabal-version:      2.4
name:               advent-of-code
version:            0.1.0
author:             Ashley Smith
maintainer:         git@aas.sh
data-files:         inputs/*.txt

executable advent-of-code
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    base,
    containers
  default-extensions:
    LambdaCase
  other-modules:
    Paths_advent_of_code,
    Year2022.Day01,
    Year2022.Day02,
    Year2022.Day03,
    Util
  autogen-modules:
    Paths_advent_of_code
